# template_XNAT_plugin

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle  settings.gradle
.github/workflows/: create_release.yaml  links.yaml  linting.yaml  test.yaml
docs/: developer-docs.md
python/: pyproject.toml
python/src/xnat_mrd/: fetch_datasets.py
python/tests/: conftest.py  test_server.py  utils.py
