[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["h5py", "ismrmrd", "pooch", "xmlschema", "xnat"]
description = "populate datatype fields"
license = "Apache-2.0"
name = "xnatmrd"
readme = "README.md"
requires-python = "==3.13.*"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "types-requests", "xnat4tests"]

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow.",
]
