[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {email = "example-email@example.com", name = "Example name"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["pooch", "xnat"]
description = "XNAT plugin"
license = "Apache-2.0"
name = "xnat-plugin"
readme = "README.md"
requires-python = "==3.13.*"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "types-requests", "xnat4tests"]

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow.",
]
